Simplify CRUD with generic
