# web_golang/test_generics/models.go
@@ -1,0 +1,27 @@
+package test_generics
+
+import "go.mongodb.org/mongo-driver/bson/primitive"
+
+type TestDB struct {
+	Id       primitive.ObjectID `json:"id,omitempty" bson:"_id,omitempty"`
+	Name     string             `json:"name,omitempty" bson:"name,omitempty"`
+	Email    string             `json:"email,omitempty" bson:"email,omitempty"`
+	Password string             `json:"password,omitempty" bson:"password,omitempty"`
+	Data     []int              `json:"data,omitempty" bson:"data,omitempty"`
+}
+
+type CreateTest struct {
+	Name     string `json:"name" bson:"name" binding:"required"`
+	Email    string `json:"email" bson:"email" binding:"required"`
+	Password string `json:"password" bson:"password" binding:"required"`
+}
+
+type UpdateTest struct {
+	Name     string `json:"name,omitempty" bson:"name,omitempty"`
+	Email    string `json:"email,omitempty" bson:"email,omitempty"`
+	Password string `json:"password,omitempty" bson:"password,omitempty"`
+}
+
+type SetData struct {
+	Data []int `json:"data" bson:"data" binding:"required"`
+}
